--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-google-login": "^5.0.2",
     "react-scripts": "2.1.5",
     "socket.io-client": "^2.2.0"
   },
