--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Python build ignore
+client/build
+client/dist
+client/app.spec
+
 # Runtime data
 pids
 *.pid
